--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 keras==2.14.0
 matplotlib==3.8.0
 numpy==1.26.2
-opencv
+opencv==4.6.0
 pandas==2.1.4
 pillow==10.0.1
 plotly==5.9.0
-python==3.10.13
 seaborn==0.12.1
 scikit-learn==1.3.0
 streamlit==1.31.1
